Problem5 : 1. 5만원, 만원, 5천원, 천원, 오백원, 백원, 오십원, 십원, 일원 상수 생성